plugins/kotlin/idea/tests/testData/multiplatform/differentKindsOfDependencies/a-common/a.kt
expect class <!LINE_MARKER("descr='Has actuals in [a-js, a-jvm] modules'; targets=[(text=a-js); (text=a-jvm)]")!>A<!>
